--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "prepare": "husky install"
     },
     "dependencies": {
         "react": "^18.3.1",
@@ -29,7 +30,8 @@
         "tailwindcss": "^3.4.14",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.11.0",
-        "vite": "^5.4.10"
+        "vite": "^5.4.10",
+        "husky": "^8.0.0"
     },
     "volta": {
         "node": "20.10.0"
